--- a/.github/workflows/dotnet-build_deploy.yml
+++ b/.github/workflows/dotnet-build_deploy.yml
@@ -18,6 +18,8 @@ jobs:
       run: cd bin/Release/netcoreapp3.1/publish
     - name: Publish to deploy
       run:  dotnet publish SchVictorina.WebAPI.6.0|SchVictorina -p:PublishDir=publish --no-restore --version-suffix 6.0
+    - name: Change directory (x2)
+      run: cd ..
       
     - name: ftp-action
       uses: sebastianpopp/ftp-action@v2.0.0
