--- a/.github/workflows/dotnet-build_deploy.yml
+++ b/.github/workflows/dotnet-build_deploy.yml
@@ -14,13 +14,11 @@ jobs:
       with:
         dotnet-version: 6.0.x
         
-    - name: Change directory
-      run: cd bin/Release/netcoreapp3.1/publish
+    
     - name: Publish to deploy
       run:  dotnet publish SchVictorina.WebAPI.6.0|SchVictorina -p:PublishDir=publish --no-restore --version-suffix 6.0
     - name: Change directory (x2)
-      run: cd ..
-      
+      run: cd bin/Release/netcoreapp3.1 
     - name: ftp-action
       uses: sebastianpopp/ftp-action@v2.0.0
       with:
