--- a/.github/workflows/dotnet-build_deploy.yml
+++ b/.github/workflows/dotnet-build_deploy.yml
@@ -16,10 +16,13 @@ jobs:
         
     - name: Check dotnet
       run: dotnet --info
+
     - name: Change directory
       run: cd SchVictorina.WebAPI
+    - name: Check directory
+      run: ls -la
     - name: Publish to deploy
-      run:  dotnet publish SchVictorina.WebAPI.csproj -p:PublishDir=publish --no-restore --version-suffix 6.0
+      run:  dotnet publish ~/SchVictorina.WebAPI.csproj -p:PublishDir=publish --no-restore
     - name: Change directory (x2)
       run: cd bin/Release/netcoreapp3.1 
     - name: ftp-action
