--- a/.github/workflows/dotnet-build_deploy.yml
+++ b/.github/workflows/dotnet-build_deploy.yml
@@ -13,16 +13,10 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 6.0.x
-        
-    - name: Check dotnet
-      run: dotnet --info
-
-    - name: Change directory
-      run: cd SchVictorina.WebAPI
     - name: Check directory
       run: ls -la
     - name: Publish to deploy
-      run:  dotnet publish ~/SchVictorina.WebAPI.csproj -p:PublishDir=publish --no-restore
+      run:  dotnet publish ~/SchVictorina.WebAPI/SchVictorina.WebAPI.csproj -p:PublishDir=publish --no-restore
     - name: Change directory (x2)
       run: cd bin/Release/netcoreapp3.1 
     - name: ftp-action
