--- a/.github/workflows/dotnet-build_deploy.yml
+++ b/.github/workflows/dotnet-build_deploy.yml
@@ -17,10 +17,10 @@ jobs:
       run: ls -la
     - name: Publish to deploy
       run:  dotnet publish SchVictorina.WebAPI/SchVictorina.WebAPI.csproj -p:PublishDir=publish -c Release
-    - name: Change directory
-      run: cd /home/runner/work/schvictorina/schvictorina/SchVictorina.WebAPI/
     - name: Remove settings.xml
-      run: rm settings.xml
+      run: rm /home/runner/work/schvictorina/schvictorina/SchVictorina.WebAPI/publish/Config/settings.xml
+    - name: Remove users.xml
+      run: rm /home/runner/work/schvictorina/schvictorina/SchVictorina.WebAPI/publish/Config/users.xml
     - name: ftp-action
       uses: sebastianpopp/ftp-action@v2.0.0
       with:
