--- a/SchVictorina.WebAPI/SchVictorina.WebAPI.csproj
+++ b/SchVictorina.WebAPI/SchVictorina.WebAPI.csproj
@@ -29,6 +29,15 @@
     <None Update="gift.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="gift_rights_100.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="gift_sequence_20.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="gift_sequence_5.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 
