--- a/.github/workflows/dotnet-build_deploy.yml
+++ b/.github/workflows/dotnet-build_deploy.yml
@@ -29,6 +29,9 @@ jobs:
         password: ${{ secrets.FTP_PASSWORD }}
         localDir: "/home/runner/work/schvictorina/schvictorina/mock"
         remoteDir: "bot"
+        options: "--delete"
+    - name: Remove mock/web.config
+      run: rm /home/runner/work/schvictorina/schvictorina/mock/web.config
     - name: Upload program files and start application pool
       uses: sebastianpopp/ftp-action@v2.0.0
       with:
@@ -37,4 +40,5 @@ jobs:
         password: ${{ secrets.FTP_PASSWORD }}
         localDir: "/home/runner/work/schvictorina/schvictorina/SchVictorina.WebAPI/publish"
         remoteDir: "bot"
+        options: "--delete"
 
