--- a/SchVictorina.WebAPI/web.config
+++ b/SchVictorina.WebAPI/web.config
@@ -5,7 +5,7 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="bin\Debug\netcoreapp3.1\SchVictorina.WebAPI.exe" arguments="" stdoutLogEnabled="false" hostingModel="InProcess" />
+      <aspNetCore processPath="dotnet" arguments="SchVictorina.WebAPI.dll" stdoutLogEnabled="false" hostingModel="inprocess" />
     </system.webServer>
   </location>
 </configuration>
