--- a/SchVictorina.WebAPI/Properties/launchSettings.json
+++ b/SchVictorina.WebAPI/Properties/launchSettings.json
@@ -16,7 +16,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "telegrambot/start",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
