--- a/SchVictorina.WebAPI/SchVictorina.WebAPI.csproj
+++ b/SchVictorina.WebAPI/SchVictorina.WebAPI.csproj
@@ -14,6 +14,9 @@
     <None Update="Config\buttons_english.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Config\buttons_functions.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Config\buttons_math.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
