--- a/.github/workflows/dotnet-build_deploy.yml
+++ b/.github/workflows/dotnet-build_deploy.yml
@@ -42,3 +42,11 @@ jobs:
         password: ${{ secrets.FTP_PASSWORD }}
         localDir: "/home/runner/work/schvictorina/schvictorina/SchVictorina.WebAPI/publish/Config"
         remoteDir: "bot/Config"
+    - name: Upload the lastest images
+      uses: sebastianpopp/ftp-action@v2.0.0
+      with:
+        host: ${{ secrets.FTP_SERVER }}
+        user: ${{ secrets.FTP_USERNAME }}
+        password: ${{ secrets.FTP_PASSWORD }}
+        localDir: "/home/runner/work/schvictorina/schvictorina/SchVictorina.WebAPI/publish/Config"
+        remoteDir: "bot/Images"
