testing new FTP deploy

--- a/.github/workflows/dotnet-build_deploy.yml
+++ b/.github/workflows/dotnet-build_deploy.yml
@@ -45,3 +45,5 @@ jobs:
         only_newer: false
         # Disable SSL certificate verification
         disable_ssl_certificate_verification: true
+        # Optional raw string of flags for lftp eg. --no-empty-dirs
+        other_flags: -p, --no-perms
