--- a/.github/workflows/dotnet-build_deploy.yml
+++ b/.github/workflows/dotnet-build_deploy.yml
@@ -52,7 +52,7 @@ jobs:
         
   upload-content:
     
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
     
     steps:
     - name: Copy images
